--- a/frontend/src/components/ProductsManagementComponents/ProductsGrid/index.css
+++ b/frontend/src/components/ProductsManagementComponents/ProductsGrid/index.css
@@ -5,7 +5,7 @@
 
 @font-face {
     font-family: "Agency-fb";
-    src: url("../../assets/fonts/AgencyFB-Bold.woff2");
+    src: url("../../../assets/fonts/AgencyFB-Bold.woff2");
 }
 .products-management-grid{
     width: 100%;
