--- a/frontend/src/store_pages/pagesStyles/Login.css
+++ b/frontend/src/store_pages/pagesStyles/Login.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: "Noto Sans";
-  src: url("../../fonts/NotoSans.ttf") format("truetype");
+  src: url("../../assets/fonts/NotoSans-Regular.woff2") format("truetype");
 }
 
 .login-container {
