--- a/frontend/src/components/Loader/index.css
+++ b/frontend/src/components/Loader/index.css
@@ -1,3 +1,12 @@
+.loader-container{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0 auto;
+}
+
 .loader {
     border: 4px solid rgba(0, 0, 0, 0.5);
     border-left-color: transparent;
