--- a/frontend/src/components/Loader/index.css
+++ b/frontend/src/components/Loader/index.css
@@ -1,6 +1,7 @@
 .loader-container{
     width: 100%;
     height: 100%;
+    max-height: 60vh;
     display: flex;
     justify-content: center;
     align-items: center;
