--- a/frontend/src/components/ManagmentComponents/ProductsManagementComponents/ProductsManagementFiltersBar/index.css
+++ b/frontend/src/components/ManagmentComponents/ProductsManagementComponents/ProductsManagementFiltersBar/index.css
@@ -5,7 +5,7 @@
     gap:10px;
     margin: 0 auto;
     grid-template-areas: 
-        "search categories view-toggle filters add-products delete-products";
+        "search search view-toggle filters add-products delete-products";
     
     color: #FFF;
     text-align: center;
@@ -25,10 +25,6 @@
 
 .search-container form{
     height: 35px;
-}
-
-.categories-management-button-container{
-    grid-area: categories;
 }
 
 .products-management-filters-bar-button{
@@ -87,7 +83,7 @@
         grid-template-columns: repeat(4, 1fr);
         grid-template-areas: 
         "search search search view-toggle"
-        "categories filters add-products delete-products";
+        "filters add-products delete-products";
     }
 }
 
@@ -100,10 +96,10 @@
         display: none;
     }
     .products-management-filters-bar{
-        grid-template-columns: repeat(4, 1fr);
+        grid-template-columns: repeat(3, 1fr);
         grid-template-areas: 
-        "search search search search"
-        "categories filters add-products delete-products";
+        "search search search"
+        "filters add-products delete-products";
     }
 }
 
