--- a/frontend/src/components/ManagmentComponents/ProductsManagementComponents/ProductsManagementFiltersBar/index.css
+++ b/frontend/src/components/ManagmentComponents/ProductsManagementComponents/ProductsManagementFiltersBar/index.css
@@ -5,7 +5,7 @@
     gap:10px;
     margin: 0 auto;
     grid-template-areas: 
-        "search search view-toggle filters add-products delete-products";
+        "search search search filters add-products delete-products";
     
     color: #FFF;
     text-align: center;
@@ -39,32 +39,6 @@
     gap:10px;
     padding:5px 10px!important;
 }
-
-.view-toggle-container{
-    height: 35px;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-    gap:10px;
-    grid-area: view-toggle;
-
-    color: #726E6E;
-    text-align: center;
-    font-family: Noto Sans;
-    font-size: 20px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 137%; /* 32.88px */
-    font-variant: small-caps;
-    letter-spacing: -0.8px;
-}
-.view-toggle-container img{
-    cursor: pointer;
-    width: 50px;
-    height: 30px;
-    margin-top:2px
-}
 .filters-modal-button-container{
     height: 35px;
     grid-area: filters;
@@ -78,22 +52,10 @@
     grid-area: delete-products;
 }
 
-@media (max-width: 1000px) {
-    .products-management-filters-bar{
-        grid-template-columns: repeat(4, 1fr);
-        grid-template-areas: 
-        "search search search view-toggle"
-        "filters add-products delete-products";
-    }
-}
-
-@media (max-width: 830px) {
+@media (max-width: 600px) {
     .products-management-filters-bar-button img{
         width:18px;
         height:20px;
-    }
-    .view-toggle-container{
-        display: none;
     }
     .products-management-filters-bar{
         grid-template-columns: repeat(3, 1fr);
@@ -103,8 +65,3 @@
     }
 }
 
-@media (max-width: 500px) {
-    .products-management-filters-bar-button span{
-        display: none;
-    }
-}
