--- a/frontend/src/components/ProductsGrid/index.css
+++ b/frontend/src/components/ProductsGrid/index.css
@@ -20,10 +20,12 @@
 
 .products-grid-not-found-message{
     text-align:center;
-    position: absolute;
-    left: 50%;
-    top: 20%;
-    transform: translate(-50%, -50%);
+    width: 100%;
+    height: 100%;
+    min-height: 60vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .products-loader-container{
