--- a/frontend/src/components/ManagmentComponents/CategoriesManagement/CategoriesGrid/index.css
+++ b/frontend/src/components/ManagmentComponents/CategoriesManagement/CategoriesGrid/index.css
@@ -1,9 +1,15 @@
 .categories-management-grid{
     width: 100%;
-    margin-top: 20px;
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
-    gap: 10px;
+    height: 100%;
+    min-height:60vh;
+    display:grid;
+    grid-template-columns: repeat(auto-fill, minmax(150px, 300px));
+    gap: 0px 20px;
+    justify-content: center;
+    align-items:start;
+    margin:0 auto;
+    padding:10px;
+    position: relative;
 }
 .categories-management-card{
     width: 100%;
@@ -21,10 +27,12 @@
 .categories-management-card .img-container {
     width: 100%;
     height: 65%;
+    min-height: 65%;
     display: flex;
     align-items: top;
     justify-content: center;
     background: rgb(243 241 241);
+    position: relative;
   }
   
 .categories-management-card .img-container img{
@@ -37,6 +45,12 @@
     object-fit: contain;
     mix-blend-mode: multiply;
     background-blend-mode: multiply;
+  }
+
+  .categories-management-card .img-container .checkbox-container{
+    position: absolute;
+    right: 5px;
+    top:5px
   }
 
   .categories-management-card .name-container{
@@ -71,4 +85,11 @@
     padding-left: 5px;
     display: flex;
     align-items: center;
+    justify-content: center;
+}
+
+@media (max-width:650px){
+    .categories-management-grid{
+        grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
+    }
 }
