--- a/frontend/src/components/ManagmentComponents/CategoriesManagement/CategoriesGrid/index.css
+++ b/frontend/src/components/ManagmentComponents/CategoriesManagement/CategoriesGrid/index.css
@@ -1,15 +1,17 @@
 .categories-management-grid{
     width: 100%;
+    max-width: 1200px;
     height: 100%;
     min-height:60vh;
     display:grid;
     grid-template-columns: repeat(auto-fill, minmax(150px, 300px));
-    gap: 0px 20px;
+    gap: 20px;
     justify-content: center;
     align-items:start;
     margin:0 auto;
     padding:10px;
     position: relative;
+    
 }
 .categories-management-card{
     width: 100%;
@@ -20,7 +22,6 @@
     border: 2px solid rgba(212, 212, 212, 0.209);
     display: flex;
     flex-direction: column;
-    margin-top: 20px;
 }
 
 .categories-management-card .img-container {
@@ -90,5 +91,6 @@
 @media (max-width:650px){
     .categories-management-grid{
         grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
+        gap:10px
     }
 }
