--- a/frontend/src/components/PageLoader/index.css
+++ b/frontend/src/components/PageLoader/index.css
@@ -1,8 +1,7 @@
 .page-loader{
     width: 100vw;
-    height: 100vh;
+    min-height: 80vh;
     background-color: #fff;
-    position: absolute;
     z-index: 999;
     display: flex;
     align-items: center;
