--- a/frontend/src/components/ProductCard/index.css
+++ b/frontend/src/components/ProductCard/index.css
@@ -9,7 +9,7 @@
 }
 .product-card{
     width: 100%;
-    height: auto;   
+    height: 380px;   
     cursor: pointer;
     background-color: #fff;
     box-shadow: 2px 5px 5px rgb(202, 201, 201);
@@ -27,11 +27,10 @@
 
 .img-container {
     width: 100%;
-    height: 160px;
+    height: 300px;
     display: flex;
     align-items: top;
     justify-content: center;
-    background: rgb(243, 241, 241);
     border-radius:3px
   }
   
@@ -42,7 +41,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    object-fit: contain;
+    object-fit: cover;
     mix-blend-mode: multiply;
     background-blend-mode: multiply;
     border-radius:3px
