--- a/frontend/src/components/ProductCard/ProductPrice/index.css
+++ b/frontend/src/components/ProductCard/ProductPrice/index.css
@@ -1,14 +1,15 @@
 .price{
     margin: 0;
-    color: var(--blsvk-primary, #1e1f1fc8);
     text-align: right;
-    font-size: 24px;
-    font-weight: 600;
+    font-size: 20px;
     line-height: 40.214px; /* 167.557% */
     letter-spacing: -0.48px;
-    font-family: "Agency-fb";
     display: flex;
     flex-direction: column;
+
+    font-family: 'Poppins-Medium';
+    letter-spacing: 1.25px;
+    opacity: .8;
 }
 
 .price span{
@@ -17,6 +18,7 @@
 
 .price-with-discount .original-price{
     text-decoration-line: line-through;
-    font-size: 16px;
-    opacity: .6;
+    font-size: 13px;
+    letter-spacing: 1px;
+    opacity: .5;
 }
