--- a/frontend/src/components/Cart/AddToCartButton/index.css
+++ b/frontend/src/components/Cart/AddToCartButton/index.css
@@ -15,3 +15,21 @@
     align-items: center;
     justify-content: center;
 }
+
+.add-product-to-cart-button .show-icon{
+    animation: show 0.5s linear forwards;
+}
+
+.add-product-to-cart-button .display-none{
+    display: none;
+}
+
+@keyframes show{
+    from{
+        display: block;
+        transform: scale(0)
+    }
+    to{
+        transform: scale(1)
+    }
+}
