--- a/frontend/src/components/ActiveFilters/index.css
+++ b/frontend/src/components/ActiveFilters/index.css
@@ -8,15 +8,16 @@
 }
 
 .active-filters-container h5{
-    min-width: 130px;
+    min-width: 150px;
     margin:0;
     padding:10px;
     display: flex;
     align-items: center;
     justify-content: flex-start;
-    font-weight: 500 !important;
     font-size: 16px;
-    font-style: normal;
+    font-family: "Poppins-Medium";
+    font-weight: 400;
+    opacity: 0.7;
 }
 
 .active-filters-list{
@@ -43,31 +44,31 @@
     justify-content: center;
     align-items: center;
     gap:10px;
+    background-color: #535353;
+    color:#fff;
+    border-radius: 15px;
+    padding:3px 10px 3px 20px;
+    opacity: 0.45;
 }
 
-.active-filters-list span{
-    background-color: rgba(30, 41, 59, 0.15);
-    color: rgba(66, 66, 66, 0.426);
-    font-weight: 500 !important;
-    font-size: 16px;
-    font-style: normal;
-    padding:5px;
-    border-radius: 5px;
-    display: inline-block;
-    color:rgba(30, 41, 59, 1);
-    font-weight: bold;
+.active-filters-list span{ 
+    display: flex;
+    align-items: center;
+    justify-content: center; 
+    font-family: "Raleway-Regular";
+    font-size: 14px;
+    font-weight: 600;
+    letter-spacing: 1.8px;
 }
 
 .active-filters-list button{
-    width: 20px;
-    height: 20px;
-    background-color: rgba(90, 86, 86, 0.767);
-    border-radius: 100%;
+    background-color: transparent;
     border: 0;
     display: flex;
     align-items: center;
     justify-content: center;
     cursor: pointer;
+    margin-bottom: 3px;
 }
 
 @media (max-width: 510px) {
@@ -75,15 +76,6 @@
         flex-direction: column;
         justify-content: flex-start;
         align-items: flex-start;
-        margin-top: -20px;
-    }
-
-    .active-filters-container h5{
-        font-size: 14px;
-    }
-
-    .active-filters-list span{
-        font-size: 14px;
     }
 }
 
