--- a/frontend/src/components/Cart/AddToCartButton/index.css
+++ b/frontend/src/components/Cart/AddToCartButton/index.css
@@ -8,6 +8,7 @@
     justify-content: center;
     opacity: 0.5;
     transition: opacity 0.3s linear;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
 }
 
 .add-product-to-cart-button svg{
