--- a/frontend/src/components/ManagmentComponents/ProductsManagementComponents/ProductsManagementFiltersBar/index.css
+++ b/frontend/src/components/ManagmentComponents/ProductsManagementComponents/ProductsManagementFiltersBar/index.css
@@ -57,18 +57,22 @@
     left: 50%;
     bottom: 50px;
     z-index: 1;
-    display: flex;
     flex-direction: row;
-    gap: 10px;
-    animation: hide 0.3s forwards ;
+    gap: 10px;    
+    display: none;
 }
   
 .confirm-cancel-multiple-products-deletion-container.show {
+    display: flex;
     animation: show 0.3s 0s forwards ;
+}
+.confirm-cancel-multiple-products-deletion-container.hide {
+    animation: hide 0.3s forwards ;
 }
 
 @keyframes hide {
     from{
+        display: flex;
         opacity: 1;
         transform: translate(-50%, 0);
     }
@@ -81,12 +85,10 @@
 
 @keyframes show {
     from{
-        display: flex;
         opacity: 0;
         transform: translate(-50%, 100%);
     }
     to{
-        display: flex;
         opacity: 1;
         transform: translate(-50%, 0);
     }
