--- a/frontend/src/components/Paginator/index.css
+++ b/frontend/src/components/Paginator/index.css
@@ -7,9 +7,7 @@
     align-items: center;
     list-style-type: none;
     padding: 20px 5px;
-    margin-top: 40px;
     gap:6px;
-    border-top: 1px solid rgba(178, 177, 177, 0.236);
 }
 .paginator-invisible{
     display:none;
@@ -17,6 +15,7 @@
 .paginator a{
     text-decoration:none;
     color: black;
+    opacity: 0.8;
 }
 .paginator a:hover{
     color: black;
@@ -33,34 +32,40 @@
     border: 1px solid var(--Gray-400, #CED4DA);
     background: var(--Gray-200, #E9ECEF);
 }
+.page:hover a{
+    color:#000
+}
+
 .page-active{
     min-width: 32px;
     border-radius: 4px;
-    border: 1px solid var(--Gray-400, #CED4DA);
-    background: var(--Gray-200, #E9ECEF);
+    background: #D9658F;
+}
+.page-active a{
+    color:#fff
 }
 .next-page-button{
     cursor: pointer;
-    border-radius: 6px;
-    border: 1px solid var(--Gray-500, #ADB5BD);
     padding:5px;
-    margin-left: 5vw;
+    margin-left: 25px;
     display: flex;
     align-items: center;
+    border-radius: 4px;
 }
 .next-page-button:hover{
+    outline: 1px solid var(--Gray-400, #CED4DA);
     background: var(--Gray-200, #E9ECEF);
 }
 .previous-page-button{
     cursor: pointer;
-    border-radius: 6px;
-    border: 1px solid var(--Gray-500, #ADB5BD);
     padding:5px;
-    margin-right: 5vw;
+    margin-right: 25px;
     display: flex;
     align-items: center;
+    border-radius: 4px;
 }
 .previous-page-button:hover{
+    outline: 1px solid var(--Gray-400, #CED4DA);
     background: var(--Gray-200, #E9ECEF);
 }
 
