--- a/frontend/src/components/CategorieSideBar/index.css
+++ b/frontend/src/components/CategorieSideBar/index.css
@@ -1,51 +1,51 @@
-.mobile-mode-categories-container{
-    width: 98%;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    padding:10px;
-
-}
-
-.h3-title{
-    color: var(--Dark, #1E293B);
-    font-size: 30px;
-    font-style: normal;
-    font-weight: 600;
-    line-height: 137%;
-    letter-spacing: -0.8px;
-    margin:0;
-}
-
-.show-categories-modal-button{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap:5px;
-    border:1px solid!important;
-    background-color: rgb(249, 250, 252)
-}
-.show-categories-modal-button span{
-    width:100px;
-    height: 20px;
-    overflow: hidden;
-    text-overflow: ellipsis;
-}
-
-.show-categories-modal-button img{
-    width: 20px;
-}
-
-.categories-mobile-modal-content{
-    width: 300px;
+.categories-side-bar{
+    height: 100%;
+    width: 100%;
     text-align: center;
-    border-radius: 5px;
-    position: relative;
 }
 
-.modal-close-button{
-    float: right;
-    position: absolute;
-    right: 5px;
-    top:5px;
+.categories-side-bar ul{
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+.categories-side-bar li{
+    margin-top:10px;
+}
+.categories-side-bar li span{
+    cursor: pointer;
+    padding:5px;
+    border-radius: 5px;
+    min-width: 100px;
+    display: inline-block;
+    color:rgba(30, 41, 59, 1);
+    font-weight: bold;
+}
+
+.categories-side-bar li span:hover{
+    outline:1px solid;
+}
+
+.category-selected span{
+    outline:1px solid;
+}
+
+@media (max-width:830px){
+    .categories-side-bar h2{
+        display: none;
+    }
+    .categories-side-bar ul{
+        display: flex;
+        flex-direction: row;
+        gap:10px;
+        overflow-x: auto;
+        padding: 0px 5px 20px 5px;
+    }
+    .categories-side-bar ul::-webkit-scrollbar{
+        display:none;
+    }
+    .categories-side-bar li span{
+        white-space: nowrap;
+    }
 }
