--- a/frontend/src/store_pages/pagesStyles/Store.css
+++ b/frontend/src/store_pages/pagesStyles/Store.css
@@ -1,37 +1,23 @@
 .store-page{
     width: 100%;
-    max-width:2000px;
     min-height: 100vh;
     background-color:rgb(249, 250, 252);
     display:grid;
     grid-template-columns: repeat(5, 1fr);
-    grid-template-rows: 130px auto;
+    grid-template-rows: auto;
     grid-template-areas: 
-        "search search search search search"
         "aside content content content content";
         color: rgb(0, 0, 0);
 
 }
 
-.store-page search{
-    grid-area: search;
-}
 .store-page aside{
     grid-area: aside;
+    margin-top: 20px;
 }
 .store-page main{
     grid-area: content;
-    height: auto;
-}
-
-.search-order-container{
-    width: 80%;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-    gap:10px;
-    margin: 0 auto;
+    margin-top: 20px;
 }
 
 /*active filters container*/
@@ -49,9 +35,8 @@
 @media (max-width: 830px) {
     .store-page{
         grid-template-areas: 
-            "search search search search search"
             "aside aside aside aside aside"
             "content content content content content";
-        grid-template-rows: 60px 80px auto;
+        grid-template-rows: 80px auto;
     }
 }
