--- a/frontend/src/store_pages/pagesStyles/Store.css
+++ b/frontend/src/store_pages/pagesStyles/Store.css
@@ -1,7 +1,7 @@
 .store-page{
     width: 100%;
     min-height: 100vh;
-    background-color:rgb(249, 250, 252);
+    background-color:#fff;
     display:grid;
     grid-template-columns: repeat(5, 1fr);
     grid-template-rows: auto;
