--- a/frontend/src/components/NavBar/index.css
+++ b/frontend/src/components/NavBar/index.css
@@ -10,12 +10,13 @@
 .navbar ul{
   width: 90%;
   list-style: none;
-  margin: 0;
+  margin: 0 auto;
   display:grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 50px 50px;
+  grid-template-columns: auto auto 130px auto 1fr 30px 30px;
   grid-template-areas: "logo promotions recommended-products categories search cart dropdown";
-  gap:20px;
+  gap:30px;
   align-items: center;
+  padding-left: 0;
 }
 
 .navbar ul li{
@@ -47,7 +48,6 @@
 }
 
 .navbar .navbar-search-container{
-  width: 500px;
   grid-area: search;
 }
 
@@ -57,5 +57,54 @@
 
 .navbar .navbar-dropdown-container{
   grid-area: dropdown;
+}
+
+.navbar .navbar-categories-list-container{
+  grid-area: categories-list;
+  display: none;
+}
+
+@media (min-width:850px) and (max-width:1100px) {
+  .navbar ul{
+    width: 98%;
+    gap:20px;
+  }
+  .navbar .navbar-homepage-link{
+    font-size: 14px;
+  }
+  .navbar .navbar-logo-container h1{
+    font-size: 25px!important;
+  }
+}
+
+@media (max-width:850px){
+  .navbar{
+    height: auto;
+  }
+  .navbar .navbar-promotions-container{
+    display: none;
+  }
+  .navbar .navbar-recommended-products-container{
+    display: none;
+  }
+  .navbar .navbar-categories-container{
+    display: none;
+  }
+  .navbar .navbar-categories-list-container{
+    display: block;
+    width: 110%;
+    margin-left: -5%;
+  }
+  .navbar ul{
+    grid-template-rows: auto auto auto;
+    grid-template-columns: 1fr 20px 20px;
+    grid-template-areas: 
+    "logo logo logo"
+    "search cart dropdown"
+    "categories-list categories-list categories-list"
+    ;
+    padding-top: 20px;
+    gap:10px 30px 
+  }
 }
 
