--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -9,18 +9,6 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-body::-webkit-scrollbar {
-  display: none;
-}
-
-.header {
-  z-index: 1000;
-}
-
-.footer {
-  z-index: 1000;
-}
-
 a {
   font-weight: 500;
   text-decoration: inherit;
@@ -30,47 +18,17 @@ a:visited{
   color:black
 }
 
-.main-section{
-  min-height: 100vh;
-  display: grid;
-  grid-template-columns: 1fr;
-  grid-template-rows: 50px 1fr 60px;
-  font-family: Noto Sans;
-}
-
-body {
-  margin: 0;
-  overflow-x: hidden!important;
-  min-height: 100vh;
-  /*width: 100vw;*/
-  background-color: #ffffff;
-}
-
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
-}
-
-.btn-general-styles{
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  cursor: pointer;
-  background-color: transparent;
 }
 
 button:hover{
   cursor: pointer;
 }
 
-#root {
-  margin: 0 auto;  
-  text-align: center;
-}
-
 .main-section-route{
+  width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
