--- a/frontend/src/components/HomePageComponents/Hero/index.css
+++ b/frontend/src/components/HomePageComponents/Hero/index.css
@@ -4,6 +4,7 @@
     grid-template-columns: 1fr 1fr;
     grid-template-areas: "main aside";
     align-items: center;
+    justify-items: center;
     padding: 50px;
     gap:50px;
     margin:0 auto
@@ -11,7 +12,7 @@
 
 .homepage-hero-section main{
     width: 100%;
-    max-width: 500px;
+    max-width: 600px;
     display: flex;
     flex-direction: column;
     gap:40px;
