--- a/frontend/src/components/HomePageComponents/CategoriesGrid/index.css
+++ b/frontend/src/components/HomePageComponents/CategoriesGrid/index.css
@@ -1,5 +1,29 @@
 .homepage-categories-grid-container{
-    
+    margin-top: 50px;
+}
+
+.homepage-categories-grid-container header{
+    width: 90%;
+    margin: 0 auto;
+    margin-bottom: 20px;
+}
+
+.homepage-categories-grid-container header h1{
+    color: #000;
+    font-family: "Poppins-Medium";
+    font-size: 30px;
+    letter-spacing: 1.5px;
+    opacity: 0.5;
+    margin:0
+}
+
+.homepage-categories-grid-container header h3{
+    color: #D9658F;
+    font-family: "Poppins-Regular";
+    font-size: 25px;
+    letter-spacing: 1.25px;
+    opacity: 0.8;
+    margin-top: 10px;
 }
 
 .homepage-categories-grid{
@@ -7,7 +31,7 @@
     height: 100%;
     display:grid;
     grid-template-columns: repeat(auto-fill, 200px);
-    gap: 20px;
+    gap: 30px 20px;
     justify-content: center;
     margin:0 auto;
     padding:10px;
@@ -15,30 +39,52 @@
 
 .homepage-categories-grid a{
     width: 100%;
-    height: 200px;
+    height: 210px;
 }
 
-.homepage-categories-grid img{
+.homepage-categories-grid a img{
     width: 100%;
-    height: 100%;
+    height: 90%;
+}
+
+.homepage-categories-grid a div{
+    width: 100%;
+    text-align: center;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow:ellipsis;
+
+    color: #000;
+    font-family: "Poppins-Regular";
+    font-size: 16px;
+    letter-spacing: 2px;
+    opacity: 0.8;
 }
 
 @media (min-width: 500px) and (max-width:680px){
     .homepage-categories-grid{
         grid-template-columns: repeat(auto-fill, 150px);
-        gap: 10px
+        gap: 30px 10px
     }
     .homepage-categories-grid a{
-        height: 150px;
+        height: 160px;
     }
 }
 
 @media (max-width:500px){
     .homepage-categories-grid{
-        grid-template-columns: repeat(auto-fill, minmax(140px, 1fr));
-        gap: 10px
+        grid-template-columns: repeat(auto-fill, minmax(135px, 1fr));
+        gap: 30px 10px
     }
     .homepage-categories-grid a{
-        height: 140px;
+        height: 150px;
+    }
+
+    .homepage-categories-grid-container header h1{
+        font-size: 25px;
+    }
+
+    .homepage-categories-grid-container header h3{
+        font-size: 20px;
     }
 }
