--- a/frontend/src/components/HomePageComponents/CategoriesGrid/index.css
+++ b/frontend/src/components/HomePageComponents/CategoriesGrid/index.css
@@ -11,7 +11,7 @@
 .homepage-categories-grid-container header h1{
     color: #000;
     font-family: "Poppins-Medium";
-    font-size: 30px;
+    font-size: 25px;
     letter-spacing: 1.5px;
     opacity: 0.5;
     margin:0
@@ -20,7 +20,7 @@
 .homepage-categories-grid-container header h3{
     color: #D9658F;
     font-family: "Poppins-Regular";
-    font-size: 25px;
+    font-size: 20px;
     letter-spacing: 1.25px;
     opacity: 0.8;
     margin-top: 10px;
@@ -30,8 +30,8 @@
     width: 100%;
     height: 100%;
     display:grid;
-    grid-template-columns: repeat(auto-fill, 200px);
-    gap: 30px 20px;
+    grid-template-columns: repeat(auto-fill, 180px);
+    gap: 20px 60px;
     justify-content: center;
     margin:0 auto;
     padding:10px;
@@ -40,20 +40,22 @@
 .homepage-categories-grid a{
     width: 100%;
     height: 210px;
+    display: flex;
+    flex-direction: column;
+    gap:10px
 }
 
 .homepage-categories-grid a img{
     width: 100%;
-    height: 90%;
+    height: 80%;
 }
 
 .homepage-categories-grid a div{
-    width: 100%;
+    height: 20%;
     text-align: center;
     overflow: hidden;
     white-space: nowrap;
     text-overflow:ellipsis;
-
     color: #000;
     font-family: "Poppins-Regular";
     font-size: 16px;
@@ -61,30 +63,29 @@
     opacity: 0.8;
 }
 
-@media (min-width: 500px) and (max-width:680px){
+@media (min-width: 400px) and (max-width:680px){
     .homepage-categories-grid{
         grid-template-columns: repeat(auto-fill, 150px);
-        gap: 30px 10px
+        gap: 10px 30px
     }
     .homepage-categories-grid a{
         height: 160px;
     }
+
+    .homepage-categories-grid a div{
+        font-size: 14px;
+    }
 }
 
-@media (max-width:500px){
+@media (max-width:400px){
     .homepage-categories-grid{
         grid-template-columns: repeat(auto-fill, minmax(135px, 1fr));
-        gap: 30px 10px
+        gap: 5px 15px
     }
     .homepage-categories-grid a{
-        height: 150px;
+        height: 170px;
     }
-
-    .homepage-categories-grid-container header h1{
-        font-size: 25px;
-    }
-
-    .homepage-categories-grid-container header h3{
-        font-size: 20px;
+    .homepage-categories-grid a div{
+        font-size: 14px;
     }
 }
