button go to top added to home page, page blank space on the right fixed: it was caused by the navbar dropdown

--- a/frontend/src/components/NavBar/index.css
+++ b/frontend/src/components/NavBar/index.css
@@ -57,6 +57,7 @@
 
 .navbar .navbar-dropdown-container{
   grid-area: dropdown;
+  overflow-x: hidden;
 }
 
 .navbar .navbar-categories-list-container{
