--- a/frontend/src/components/HomePageComponents/Promotions/index.css
+++ b/frontend/src/components/HomePageComponents/Promotions/index.css
@@ -1,11 +1,11 @@
 .homepage-promotions-section{
-    height: 300px;
     background-color: #F6E6EC;
     margin-top:50px;
     box-shadow: 0px 0px 5px 0px 5px black;
+    height: auto;
 }
 
-.homepage-promotions-section h1{
+.homepage-promotions-section > h1{
     margin: 0;
     text-align: center;
     color: #000;
@@ -16,8 +16,42 @@
     opacity: 0.58;
 }
 
-@media (max-width:500px){
-    .homepage-promotions-section h1{
+.homepage-promotions-section .cards-container{
+    display: grid;
+    grid-template-columns: repeat(3, 250px);
+    justify-content: center;
+    gap:20px;
+    width: 100%;
+    height: 400px;
+    overflow: hidden;
+    padding: 0px 0px 20px 0px;
+}
+
+@media (min-width:680px) and (max-width: 850px){
+    .homepage-promotions-section .cards-container{
+        grid-template-columns: repeat(3, 200px);
+        height: auto;
+    }
+}
+
+@media (min-width:550px) and (max-width:680px){
+    .homepage-promotions-section .cards-container{
+        grid-template-columns: repeat(3, 150px);
+        height: auto;
+    }
+    .homepage-promotions-section > h1{
+        font-size: 25px;
+    }
+}
+
+@media (max-width: 550px){
+    .homepage-promotions-section .cards-container{
+        grid-template-columns: repeat(3, minmax(80px, 1fr));
+        height: auto;
+        gap: 10px;
+        padding: 0px 5px 20px 5px;
+    }
+    .homepage-promotions-section > h1{
         font-size: 25px;
     }
 }
