--- a/frontend/src/components/StorePageComponents/ProductsGrid/ProductCard/index.css
+++ b/frontend/src/components/StorePageComponents/ProductsGrid/ProductCard/index.css
@@ -1,6 +1,6 @@
 .product-card{
     width: 100%;
-    height: 380px;   
+    height: 100%;   
     cursor: pointer;
     background-color: #fff;
     box-shadow: 1px 1px 3px rgb(202, 201, 201);
@@ -8,6 +8,9 @@
     padding:10px;
     transition: transform 0.3s linear;
     transition: box-shadow 0.3s linear;
+    display:flex;
+    flex-direction: column;
+    gap:10px
 }
 
 .product-card:hover{
@@ -21,7 +24,7 @@
 
 .img-container {
     width: 100%;
-    height: 300px;
+    flex-grow: 1;
     display: flex;
     align-items: top;
     justify-content: center;
@@ -41,26 +44,27 @@
 
 .name-and-price-container{
     width: 100%;
-    height: auto;
     display:flex;
     flex-direction: row;
-    align-items: center;
+    align-items: flex-start;
     justify-content: space-between;
-    padding: 5px;
+    padding: 0px 5px 0px 5px;
     gap:10px;
 }
 
 .product-card-name{
+    flex-grow: 1;
+    max-width: 100%;
     margin:0;
+    padding-top: 5px;
     color: #000;
-    font-size: 18px;
-    line-height: 21.245px;
+    font-size: 16px;
     overflow: hidden;
     white-space: nowrap;
     text-overflow:ellipsis;
-    font-family: 'Poppins-Medium';
+    font-family: 'Poppins-Regular';
     letter-spacing: 1.25px;
-    opacity: .8;
+    opacity: 0.8;
 }
 
 .product-card .add-to-cart-button-container{
@@ -74,16 +78,19 @@
 
 /*Mobile*/
 @media (max-width: 650px) {
-  .product-card{
-    height: 280px;
-  } 
-  .product-card .img-container{
-    height: 200px;
-  }
   .product-card .add-product-to-cart-button{
     width: 30px;
     height: 30px;
   }
+
+  .product-card{
+    padding: 8px;
+  }
+
+  .product-card .name-and-price-container{
+    flex-direction: column;
+  }
+
 }
 
 @media (hover: none){
