finishing responsive desing of promotins and product card on homepage

--- a/frontend/src/components/StorePageComponents/ProductsGrid/ProductCard/index.css
+++ b/frontend/src/components/StorePageComponents/ProductsGrid/ProductCard/index.css
@@ -44,8 +44,11 @@
 
 .name-and-price-container{
     width: 100%;
-    display:flex;
-    flex-direction: row;
+    display:grid;
+    grid-template-columns: auto 1fr;
+    grid-template-areas: 
+    "name price"
+    "punctuation price";
     align-items: flex-start;
     justify-content: space-between;
     padding: 0px 5px 0px 5px;
@@ -53,18 +56,28 @@
 }
 
 .product-card-name{
-    flex-grow: 1;
-    max-width: 100%;
-    margin:0;
-    padding-top: 5px;
-    color: #000;
-    font-size: 16px;
-    overflow: hidden;
-    white-space: nowrap;
-    text-overflow:ellipsis;
-    font-family: 'Poppins-Regular';
-    letter-spacing: 1.25px;
-    opacity: 0.8;
+  grid-area: name;
+  height: 100%;
+  flex-grow: 1;
+  max-width: 100%;
+  margin:0;
+  padding-top: 5px;
+  color: #000;
+  font-size: 16px;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow:ellipsis;
+  font-family: 'Poppins-Regular';
+  letter-spacing: 1.25px;
+  opacity: 0.8;
+}
+
+.product-card .name-and-price-container .product-card-punctuation{
+  grid-area: punctuation;
+}
+
+.product-card .name-and-price-container .price{
+  grid-area: price;
 }
 
 .product-card .add-to-cart-button-container{
@@ -76,7 +89,17 @@
     justify-content: center;
 }
 
-/*Mobile*/
+@media (max-width: 800px){
+  .product-card .name-and-price-container{
+    grid-template-areas: 
+    "name name"
+    "punctuation price";
+  }
+  .product-card-name{
+    text-align: center;
+  }
+}
+
 @media (max-width: 650px) {
   .product-card .add-product-to-cart-button{
     width: 30px;
@@ -86,11 +109,12 @@
   .product-card{
     padding: 8px;
   }
+}
 
-  .product-card .name-and-price-container{
-    flex-direction: column;
+@media (max-width:500px) {
+  .product-card-name{
+    font-size: 14px;
   }
-
 }
 
 @media (hover: none){
