--- a/frontend/src/components/HomePageComponents/Promotions/index.css
+++ b/frontend/src/components/HomePageComponents/Promotions/index.css
@@ -4,7 +4,8 @@
     box-shadow: 0px 0px 5px 0px 5px black;
     height: auto;
     min-height: 300px;
-    padding-top: 30px;
+    padding: 30px 0px 20px 0px;
+    position: relative;
 }
 
 .homepage-promotions-section > h1{
@@ -39,10 +40,30 @@
     padding: 0px 0px 20px 0px;
 }
 
+.homepage-promotions-section .points-container{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    gap:10px
+}
+
+.homepage-promotions-section .points-container .point{
+    width: 13px;
+    height: 13px;
+    border-radius: 100%;
+    border: 0;
+    background-color: #999999;
+}
+
+.homepage-promotions-section .points-container .point-active{
+   background-color: #D9658F;
+}
+
 @media (min-width:680px) and (max-width: 850px){
     .homepage-promotions-section .cards-container{
         grid-template-columns: repeat(3, 200px);
         height: auto;
+        min-height: 400px;
     }
 }
 
@@ -50,6 +71,7 @@
     .homepage-promotions-section .cards-container{
         grid-template-columns: repeat(3, 150px);
         height: auto;
+        min-height: 300px;
     }
     .homepage-promotions-section > h1{
         font-size: 25px;
@@ -60,10 +82,15 @@
     .homepage-promotions-section .cards-container{
         grid-template-columns: repeat(3, minmax(80px, 1fr));
         height: auto;
+        min-height: 250px;
         gap: 10px;
         padding: 0px 5px 20px 5px;
     }
     .homepage-promotions-section > h1{
         font-size: 25px;
+    }
+    .homepage-promotions-section .points-container .point{
+        width: 10px;
+        height: 12px;
     }
 }
