--- a/frontend/src/components/Footer/index.css
+++ b/frontend/src/components/Footer/index.css
@@ -5,8 +5,8 @@
     text-align: center;
     justify-content: center;
     padding:10px;
-    background-color:#010101;
-    color: var(--Secondary, #ffffff);
+    background-color: #74334B;
+    color: #fff;
     font-size: 12px;
     font-weight: 400;
     line-height: 125%; 
