--- a/frontend/src/components/StorePageComponents/ProductsGrid/ProductCard/index.css
+++ b/frontend/src/components/StorePageComponents/ProductsGrid/ProductCard/index.css
@@ -1,6 +1,8 @@
 .product-card{
     width: 100%;
     height: 100%;   
+    max-width: 280px;
+    max-height: 420px;
     cursor: pointer;
     background-color: #fff;
     box-shadow: 1px 1px 3px rgb(202, 201, 201);
@@ -25,6 +27,7 @@
 .img-container {
     width: 100%;
     flex-grow: 1;
+    max-height: 86%;
     display: flex;
     align-items: top;
     justify-content: center;
