--- a/frontend/src/components/StorePageComponents/ProductsGrid/index.css
+++ b/frontend/src/components/StorePageComponents/ProductsGrid/index.css
@@ -9,13 +9,17 @@
     height: 100%;
     min-height:60vh;
     display:grid;
-    grid-template-columns: repeat(auto-fill, minmax(280px, 280px));
+    grid-template-columns: repeat(auto-fill, 280px);
     gap: 20px;
     justify-content: center;
     align-items:start;
     margin:0 auto;
     padding:10px;
     position: relative;
+}
+
+.products-grid .card-container{
+    height: 420px;
 }
 
 .products-grid-not-found-message{
@@ -51,6 +55,10 @@
         grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
         gap:10px;
     }
+    .products-grid .card-container{
+        height: auto;
+        min-height: 400px;
+    }
     .next-page-button{
         margin:0
     }
@@ -67,5 +75,9 @@
     .products-grid{
         grid-template-columns: repeat(auto-fill, minmax(135px, 1fr));
         gap:10px;
+    }
+    .products-grid .card-container{
+        height: auto;
+        min-height: 300px;
     }
 }
