--- a/frontend/src/store_pages/pagesStyles/Store.css
+++ b/frontend/src/store_pages/pagesStyles/Store.css
@@ -2,43 +2,28 @@
     width: 100%;
     min-height: 100vh;
     background-color:#fff;
-    display:grid;
-    grid-template-columns: repeat(5, 1fr);
-    grid-template-rows: auto;
-    grid-template-areas: 
-        "aside content content content content";
-        color: rgb(0, 0, 0);
+    color: rgb(0, 0, 0);
 
 }
 
-.store-page aside{
-    grid-area: aside;
-    margin-top: 20px;
-}
 .store-page main{
-    grid-area: content;
     margin-top: 20px;
 }
 
-/*active filters container*/
-.store-page-active-filters-component-container{
-    margin: 0 auto;
+.store-page .active-filters-component-container{
+    margin-left: 15px;
 }
 
-@media (min-width: 850px){
-    .store-page-active-filters-component-container{
-        width: 80%;
-        padding-left: 10px;
+@media (max-width:500px){
+    .store-page main{
+        margin-top: 0;
     }
+
+    .store-page .active-filters-component-container{
+        margin-left: 0;
+    }
+
 }
 
-@media (max-width: 850px) {
-    .store-page{
-        grid-template-areas: 
-            "content content content content content";
-        grid-template-rows: auto;
-    }
-    .store-page aside{
-        display: none;
-    }
-}
+
+
