--- a/frontend/src/components/NavBar/PromotionsDropdown/index.css
+++ b/frontend/src/components/NavBar/PromotionsDropdown/index.css
@@ -1,23 +1,21 @@
-.products-management-categories-filter-button{
-    height: 50px;
+.navbar-promotions-dropdown{
     max-width: 230px;
-    padding-top: 5px;
-    padding-bottom: 5px;
-    border: 1px solid;
+    border: 0;
     outline: 0;
     align-items: center;
     box-shadow: 0 0 0 transparent;
     background-color: transparent;
 }
-.products-management-categories-filter-button span{
+.navbar-promotions-dropdown span{
     color: black;
     font-weight: bold;
 }
-
-/*Mobile*/
-@media (max-width: 830px){
-    .products-management-categories-filter-button span{
-        margin:0;
-        padding: 0;
-    }
+.navbar-promotions-dropdown .p-dropdown-label{
+    color: #313131;
+    font-family: "Poppins-Regular";
+    font-size: 17px;
+    font-weight: 400;
+}
+.navbar-promotions-dropdown .p-dropdown-trigger{
+    width: 1rem;
 }
