--- a/frontend/src/components/NavBar/CategoriesDropdown/index.css
+++ b/frontend/src/components/NavBar/CategoriesDropdown/index.css
@@ -7,7 +7,7 @@
     background-color: transparent;
 }
 
-.p-dropdown-panel .p-dropdown-items .p-dropdown-item.p-highlight {
+.navbar-categories-dropdown-panel .p-dropdown-items .p-dropdown-item.p-highlight {
     background-color: #D9658F;
     color: white
 }
