--- a/frontend/src/components/HomePageComponents/RecommendedProducts/index.css
+++ b/frontend/src/components/HomePageComponents/RecommendedProducts/index.css
@@ -1,6 +1,118 @@
 .homepage-recommended-products{
-    display: flex;
+    width: 100%;
+    display: grid;
+    grid-template-columns: minmax(150px, 450px) 50%;
+    grid-template-areas: 
+    "image title"
+    "image description";
     justify-content: center;
-    gap:170px;
+    align-items: center;
+    gap:0px 50px;
     margin-top: 50px;
+    padding: 20px;
+}
+
+.homepage-recommended-products > aside{
+    grid-area: image;
+}
+.homepage-recommended-products > header{
+    grid-area: title;
+    align-self: flex-end;
+}
+.homepage-recommended-products > section{
+    grid-area: description;
+    align-self: flex-start;
+}
+
+.homepage-recommended-products > header > h1{
+    margin: 0;
+    color: #D9658F;
+    text-align: center;
+    font-family: "Poppins-Regular";
+    font-size: 35px;
+    font-weight: 600;
+    letter-spacing: 1.5px;
+    text-align: end;
+    text-wrap: pretty;
+}
+
+.homepage-recommended-products > section > p{
+    text-align: end;
+    color: #313131;
+    text-align: right;
+    font-family: "Poppins-Regular";
+    font-size: 23px;
+    font-weight: 300;
+    letter-spacing: 3px;
+    text-wrap: pretty;
+}
+
+.homepage-recommended-products > aside .pictures-details{
+    border-radius: 15px;
+    background-color: transparent;
+}
+.homepage-recommended-products > aside img{
+    border-radius: 15px;
+}
+.homepage-recommended-products > aside .active-button-carousel{
+    background-color: #D9658F;
+    transform: scale(1.3);
+}
+
+@media (max-width:1000px) {
+    .homepage-recommended-products > header > h1{
+       font-size: 30px;
+    }
+    .homepage-recommended-products > section > p{
+        font-size: 20px;
+    }
+}
+@media (max-width:800px) {
+    .homepage-recommended-products{
+        grid-template-columns:90%;
+        grid-template-areas: 
+        "title"
+        "image"
+        "description";
+        gap:20px
+    }
+    .homepage-recommended-products > aside{
+        width: 60%;
+        margin: auto;
+    }
+    .homepage-recommended-products > header > h1{
+        text-align: center;
+     }
+    .homepage-recommended-products > section > p{
+        text-align: start;
+    }
+}
+
+@media (max-width:600px) {
+    .homepage-recommended-products{
+        grid-template-columns:100%;
+        grid-template-areas: 
+        "title"
+        "image"
+        "description";
+        gap:10px
+    }
+    .homepage-recommended-products > aside{
+        width: 70%;
+        margin: auto;
+    }
+
+    .homepage-recommended-products > header > h1{
+        font-size: 25px;
+    }
+    .homepage-recommended-products > section > p{
+        font-size: 16px;
+    }
+}
+
+@media (max-width: 500px){
+    .homepage-recommended-products > aside{
+        width: 100%;
+        margin: auto;
+    }
 }
