--- a/frontend/src/components/NavBar/CategoriePromotionSlider/index.css
+++ b/frontend/src/components/NavBar/CategoriePromotionSlider/index.css
@@ -7,13 +7,13 @@
 .categories-side-bar ul {
   width: 100%;
   list-style: none;
-  padding: 0;
   margin: 0;
   display: flex;
   flex-direction: row;
   gap: 10px;
   overflow-x: auto;
   padding: 5px 5px 20px 5px;
+  font-family: "Poppins-Regular";
 }
 
 .categories-side-bar ul::-webkit-scrollbar {
@@ -26,8 +26,7 @@
   border-radius: 5px;
   min-width: 100px;
   display: inline-block;
-  color: rgba(30, 41, 59, 1);
-  font-weight: bold;
+  color: #000;
   white-space: nowrap;
 }
 
