--- a/frontend/src/components/ManagmentComponents/ProductsManagementComponents/ProductsGrid/index.css
+++ b/frontend/src/components/ManagmentComponents/ProductsManagementComponents/ProductsGrid/index.css
@@ -1,26 +1,24 @@
 
 .products-management-grid{
     width: 100%;
+    overflow: hidden;
     height: 100%;
     min-height: 52vh;
     display:grid;
-    grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(130px, 1fr));
     gap:10px;
     justify-content: center;
-    align-items:start;
+    align-items:center;
     margin:0 auto;
-    padding:10px;
     margin-top: 20px;
+    padding: 10px;
 
     color: #FFF;
     text-align: center;
-    font-family: "Noto Sans";
+    font-family: "Poppins-Regular";
     font-size: 28px;
-    font-style: normal;
     font-weight: 400;
-    line-height: 137%; /* 38.36px */
     font-variant: small-caps;
-    letter-spacing: -0.8px;
 }
 
 .products-management-grid-loader-container{
@@ -61,6 +59,8 @@
     align-items: center;
     justify-content: center;
     background: rgb(243 241 241);
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
   }
   
 .product-management-card .img-container img{
@@ -70,9 +70,11 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    object-fit: contain;
+    object-fit: cover;
     mix-blend-mode: multiply;
     background-blend-mode: multiply;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
   }
 
 .product-management-card .name-and-price-container{
@@ -90,7 +92,6 @@
     margin:0;
     color: #5c6475;
     font-size: 14px;
-    font-style: normal;
     font-weight: 500;
     line-height: 21.245px;
     overflow: hidden;
@@ -100,14 +101,13 @@
 
 .product-management-card .price{
     margin: 0;
-    color: var(--blsvk-primary, #1E1F1F);
+    color: #5c6475;
     text-align: right;
-    font-size: 22px;
-    font-style: normal;
+    font-size: 18px;
     font-weight: 600;
     line-height: 40.214px; /* 167.557% */
     letter-spacing: -0.48px;
-    font-family: "Agency-fb";
+    font-family: "Poppins-Regular";
 }
 
 .product-management-card .action-buttons-container{
