--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -16,3 +16,13 @@ button:hover{
   cursor: pointer;
 }
 
+.btn-general-styles{
+  border-radius: 8px;
+  border: 1px solid transparent;
+  padding: 0.6em 1.2em;
+  font-size: 1em;
+  font-weight: 500;
+  cursor: pointer;
+  background-color: transparent;
+}
+
