organizing hooks, putting management hooks inside a folder. Cleaning Promotions management page to re-build it

--- a/frontend/src/store_pages/pagesStyles/ManagementUsers.css
+++ b/frontend/src/store_pages/pagesStyles/ManagementUsers.css
@@ -16,7 +16,7 @@
     
 }
 
-.management-oferts-container header button:hover{
+.management-oferts-container header button{
     background: #2e2e2e !important;
 }
 .management-oferts-container header i{
