--- a/frontend/src/components/ManagmentComponents/ProductsManagementComponents/ProductForm/index.css
+++ b/frontend/src/components/ManagmentComponents/ProductsManagementComponents/ProductForm/index.css
@@ -96,6 +96,10 @@
     margin-top: 10px;
 }
 
+.product-form-recommended-checkbox label{
+    width: 110px;
+}
+
 /*cambio el color del checkbox a gris*/
 .product-form-recommended-checkbox .p-highlight{
     background-color: rgba(84, 84, 84, 1);
@@ -185,12 +189,13 @@
     }
     .product-image-field{
         flex-direction: column;
-        width: 60%;
+        width: 100%;
+        height: 100px;
         margin: 0 auto;
     }
     .product-image-field img{
         width: 100%;
-        height: auto;
+        height: 100%;
     }
     .product-form-field{
         flex-direction: column;
@@ -203,10 +208,13 @@
     .product-form-active-checkbox{
         gap:10px
     }
+    .product-form-active-checkbox label{
+        width: 120px;
+    }
     .product-form-images-container{
-        grid-template-columns: repeat(1, 100%);
-        grid-template-rows: repeat(3, auto);
-        justify-content: flex-start;
+        grid-template-columns: repeat(3, 1fr);
+        justify-content: center;
+        align-items: center;
     }
 }
 
