--- a/frontend/src/components/ManagmentComponents/ProductsManagementComponents/ManagmentProductsPageHeader/index.css
+++ b/frontend/src/components/ManagmentComponents/ProductsManagementComponents/ManagmentProductsPageHeader/index.css
@@ -15,6 +15,8 @@
     height: 30px;
     background-color: rgba(84, 84, 84, 1)!important;
     border-radius: 5px;
+    border:0;
+    outline: 0;
     cursor: pointer;
     display: flex;
     align-items: center;
