--- a/frontend/src/components/ManagmentComponents/ProductsManagementComponents/ProductsGrid/index.css
+++ b/frontend/src/components/ManagmentComponents/ProductsManagementComponents/ProductsGrid/index.css
@@ -22,11 +22,11 @@
 }
 
 .products-management-grid-loader-container{
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
     position: absolute;
-    top:50vh;
-    left: 50vw;
+    top:50%;
+    left: 50%;
     transform: translate(-50%, -50%);
     z-index: 2;
     backdrop-filter: blur(10px);
@@ -125,12 +125,6 @@
     top: 0;
     right: 5px;
     margin-top: -10px;
-}
-
-@media (width > 1300px){
-    .products-management-grid-loader-container{
-        left: 40vw;
-    }
 }
 
 @media (max-width:500px){
