showing modal on add products to category and promotion and getting categories and promotion through the hooks

--- a/frontend/src/components/ManagmentComponents/ProductsManagementComponents/ProductsManagementFiltersBar/index.css
+++ b/frontend/src/components/ManagmentComponents/ProductsManagementComponents/ProductsManagementFiltersBar/index.css
@@ -37,6 +37,7 @@
     color: #fff;
     gap:10px;
     padding:5px 10px!important;
+    outline: none;
 }
 .filters-modal-button-container{
     height: 35px;
